--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
